/**
 *  Offer Manager API
 */


syntax = "proto3";

package peloton.master.offerpool;

option go_package = "offerpool";

import "mesos/v1/mesos.proto";

service OfferPool{

  // Get a set of offers from the leader of Peloton master
  rpc GetOffers(GetOffersRequest) returns (GetOffersResponse);

}

message GetOffersRequest {
  // Max number of offers to acquire
  uint32 limit = 1;
}

message GetOffersResponse {
  // The list of offers that have been returned
  repeated mesos.v1.Offer offers = 1;
}
